# sidecliq

./: Cargo.toml  run
docs/: sample.txt
sidekiq-cli/: Cargo.toml
sidekiq-cli/src/: main.rs
sidekiq-lib/: Cargo.toml
sidekiq-lib/src/: client.rs  types.rs
sidekiq-warp/: Cargo.toml
sidekiq-warp/src/: main.rs
sidekiq-warp/templates/: index.html  jobs.html
sidemon-cli/: Cargo.toml
sidemon-cli/src/: main.rs
sidemon-lib/: Cargo.toml
sidemon-lib/src/: client.rs  connection.rs  lib.rs  types.rs
sidemon-warp/: Cargo.toml  run
sidemon-warp/src/: main.rs
sidemon-warp/templates/: index.html
src/: connection.rs  main.rs  types.rs
