[package]
name = "sidekiq-warp"
version = "0.1.0"
authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "*"
listenfd = "*"
serde = { version = "*", features = ["derive"] }
sidekiq-lib = { path = "../sidekiq-lib" }
tera = { version = "*", default-features = false }
tokio = { version = "0.2", features = ["full"] }
warp = "*"

[features]
dynamic_templates = []
