[package]
name = "sidemon-warp"
version = "0.1.0"
authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]
edition = "2018"

[dependencies]
include_dir = "*"
hyper = "*"
listenfd = "*"
serde = { version = "*", features = ["derive"] }
sidemon-lib = { path = "../sidemon-lib" }
tera = { version = "*", default-features = false }
tokio = { version = "0.2", features = ["full"] }
warp = "*"

[features]
dynamic_templates = []
